--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e ts -x ts-node src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "start": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "cli-table": "^0.3.1",
+    "ts-node": "^7.0.0",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.3",
-    "ts-node": "^7.0.0"
+    "ts-node-dev": "^1.0.0-pre.26"
   }
 }
