--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cli-table": "^0.3.1",
+    "node-notifier": "^5.2.1",
     "ts-node": "^7.0.0",
     "typescript": "^3.0.1"
   },
